# TFM

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  Stats.ipynb  chatGPT.py  lib.ts  main.ts  main_bench.ts  stats0to100.csv  statsbig.csv  test.ts
.github/workflows/: stats.yml  test.yml
docs/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  refs.bib  shortcut.sty
docs/animations/: build.tape  denoflags.tape
docs/presentation/: main.md
src/: lib.rs
