[package]
name = "tfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bcrypt = "0.13"
crypto_kx = "0.1.0"
crypto_box = "0.8.2"
tweetnacl = "0.4.0"
sodalite = "0.4.0"
base64 = "0.21.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
